# ediater

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
plugins/claude/: index.mjs  plugin.toml
plugins/ini-grammar/: example.ini  ini.tmLanguage.json  plugin.toml
plugins/json-formatter/: index.mjs  plugin.toml
plugins/sdk/: ediater-plugin-sdk.mjs
scripts/: gen-icon.mjs
src/: main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_log.rs  commands.rs  lib.rs  main.rs  session.rs  state.rs
src-tauri/src/fs/: io.rs  listing.rs  mod.rs  watch.rs
src-tauri/src/plugins/: connection.rs  host.rs  manifest.rs  mod.rs
src-tauri/src/pty/: session.rs
src-tauri/src/search/: files.rs  mod.rs  text.rs
src/app/: App.tsx  settings.ts  workspace.tsx
src/app/ipc/: commands.ts  events.ts
src/app/log/: actionLog.test.ts  actionLog.ts  client.ts  coalescer.test.ts  coalescer.ts  config.ts  mapping.test.ts  mapping.ts  redact.test.ts  redact.ts  schema.ts
src/app/session/: persistence.ts  (+2 more)
src/commands/: CommandPalette.tsx  CommandsLayer.tsx  commands.css  fuzzy.ts  keybindings.ts  types.ts  useCommands.ts
src/components/: AppShell.tsx
src/layout/: DockLayout.tsx  ids.ts  layout.test.ts  layout.ts  panel.ts  panelRegistry.tsx
src/panels/: panelState.ts
src/plugins/: grammars.ts
src/styles/: global.css  layout.css
(+25 files in other folders)
